Added 5-day forecast horizontal list

--- a/lib/core/config/l10n/intl_en_US.arb
+++ b/lib/core/config/l10n/intl_en_US.arb
@@ -7,7 +7,8 @@
   "locating_user_on_map_text": "Locating user on map...",
   "user_location_is_unknown_text": "User location is unknown!",
 
-  "celsius_symbol": "°C",
   "max_temperature_subtitle": "Max:",
-  "min_temperature_subtitle": "Min:"
+  "min_temperature_subtitle": "Min:",
+  "weather_5_days_forecast_title": "5-DAY FORECAST"
+
 }
